# ralph-hl

./: .gitignore  Cargo.toml  README.md
scripts/ralph/: .last-branch  CLAUDE.md  prd.json  progress.txt
src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
src/exchange/: approval.rs  cancel.rs  leverage.rs  misc.rs  mod.rs  modify.rs  orders.rs  schedule_cancel.rs  staking.rs  transfer.rs  twap.rs  vault.rs
src/info/: account.rs  borrow_lend.rs  fills.rs  funding.rs  market.rs  mod.rs  orders.rs  perpetuals.rs  spot.rs  staking.rs  user.rs  vault.rs
src/websocket/: client.rs  mod.rs  subscription.rs
static/: index.html
