[package]
name = "hyperliquid-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Hyperliquid API"
license = "MIT"
repository = "https://github.com/example/hyperliquid-sdk"
keywords = ["hyperliquid", "trading", "crypto", "api", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Ethereum/EIP-712 signing
ethers = { version = "2.0", features = ["legacy"] }

# MessagePack serialization (for action hashing)
rmp-serde = "1.1"

# Hex encoding/decoding
hex = "0.4"

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockito = "1.2"

[[bin]]
name = "demo-server"
path = "src/bin/demo_server/main.rs"
required-features = ["demo"]

[features]
demo = ["axum", "tower-http", "tracing", "tracing-subscriber"]

[dependencies.axum]
version = "0.7"
features = ["ws"]
optional = true

[dependencies.tower-http]
version = "0.5"
features = ["cors", "fs"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true
